# fifa-skeletal-tracking-2026

./: .gitignore  README.md  download_data.py  environment.yaml  main.py  prepare_submission.py  preprocess.py  pyproject.toml  video2image.py  visualize.py
doc/: data.md
lib/: camera_tracker.py  postprocess.py
scripts/: run_jobs.sh  run_vis.sh
