[project]
name = "fifa-skeletal-tracking-2026"
version = "0.1.0"
description = "Skeletal Tracking Engine 2026"
authors = [{ name = "kevthan", email = "k.thandiackal@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy",
    "opencv-python",
    "tqdm",
    "scipy",
    "torch",
    "huggingface-hub",
    "pandas",
    "ruff",
    "pyqt6 (>=6.10.2,<7.0.0)",
    "moderngl-window (==2.4.6)",
    "pyglet (>=2.1.13,<3.0.0)",
    "aitviewer (>=1.13.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# E/F: pycodestyle + pyflakes
# I: import sorting
# B: bugbear
# UP: pyupgrade
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
